--- a/Plugin/build.gradle
+++ b/Plugin/build.gradle
@@ -15,9 +15,9 @@ apply plugin: 'com.android.application'
     }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:cardview-v7:24.0.0'
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.sonelli:juicessh-pluginlibrary:1.0.13@aar'
 }
 
@@ -33,13 +33,13 @@ android {
 
     signingConfigs {
     }
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.sonelli.juicessh.performancemonitor"
+        applicationId "com.toddindustries.juicessh.performancemonitor"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 10
         versionName "1.1.0"
     }
